<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2010422"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="1171dp"
        android:layout_height="1297dp"
        android:contentDescription="@string/todok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57"
        app:srcCompat="@drawable/img_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/screen_1"
        android:layout_width="158dp"
        android:layout_height="73dp"
        android:background="@color/Sky_blue"
        android:text="@string/your_gifts"
        android:textColor="#4527A0"
        app:backgroundTint="@color/Sky_blue"
        app:cornerRadius="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.936"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.431"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/screen_2"
        android:layout_width="352dp"
        android:layout_height="86dp"
        android:backgroundTint="@color/Sky_blue"
        android:text="@string/creat_your_own_personalized_card"
        android:textColor="#4527A0"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787">

    </com.google.android.material.button.MaterialButton>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/screen_3"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:text="@string/go_to_screen_3"
        android:textColor="#4527A0"
        app:backgroundTint="@color/Sky_blue"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/screen_4"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:text="@string/go_to_screen_4"
        android:textColor="#4527A0"
        app:backgroundTint="@color/Sky_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.889"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/screen_5"
        android:layout_width="140dp"
        android:layout_height="80dp"
        android:text="@string/go_to_screen_5"
        android:textColor="#4527A0"
        app:backgroundTint="@color/Sky_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.187" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="271dp"
        android:layout_height="69dp"
        android:gravity="center"
        android:text="@string/Home"
        android:textColor="#607D8B"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />

</androidx.constraintlayout.widget.ConstraintLayout>